[package]
name = "tcp_chat"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
# env_logger = "0.9.0"
libp2p = { version = "0.41", features = ["tcp-tokio"] }
futures = "0.3.21"
async-std = "1.10.0"
serde_json = "1.0.79"
serde = "1.0.136"
sha2 = "0.10.2"
rand = "0.8.5"
warp = "0.3.2"	
httparse = "1.6.0"
