[package]
name = "tcp_chat"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
libp2p = { version = "0.41", features = ["tcp-tokio"] }
futures = "0.3.21"
async-std = "1.10.0"
serde_json = "1.0.79"
serde = "1.0.136"
sha2 = "0.10.2"
rand = "0.8.5"
httparse = "1.6.0"
openssl = "0.10.38"
secp256k1 = { version = "0.22.1", features = ["rand-std", "std", "bitcoin_hashes"] }
