[package]
name = "tcp_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.41", features = ["tcp-tokio", "request-response"] }
libp2p-core = "0.30"
futures = "0.3.21"
async-std = "1.10.0"
serde_json = "1.0.79"
serde = "1.0.136"
secp256k1 = { version = "0.22.1", features = ["rand-std", "std", "bitcoin_hashes"] }
prost = "0.9"
tonic = "0.6.2"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = "0.1.53"
env_logger = "0.11.7"

[build-dependencies]
tonic-build = "0.6.2"
